# USBane

./: .gitattributes  .gitignore  CMakeLists.txt  COPYING  LIMITATIONS.md  README.md  sdkconfig.defaults
.github/workflows/: build.yml
chains/: cve_2024_30212.csv  enumerate_device.csv  pocket_init.csv  pocket_probe.csv  pocket_probe2.csv  scsi_inquiry.csv
components/cardputer_adv_display/: CMakeLists.txt  cardputer_adv_display.c
components/cardputer_adv_display/include/: cardputer_adv_display.h
components/cardputer_adv_keyboard/: CMakeLists.txt  tca8418.c
components/cardputer_adv_keyboard/include/: tca8418.h
components/debug_shell/: CMakeLists.txt  debug_shell.c
components/debug_shell/include/: debug_shell.h
main/: CMakeLists.txt  Kconfig.projbuild  chain_engine.c  chain_engine.h  dwc2_backend.c  dwc2_backend.h  main.c  soft_backend.c  soft_backend.h  usbane.c  usbane.h  web_interface.c  web_interface.h  wifi_ap.c  wifi_ap.h
main/html/: api.html  app.js  index.html  openapi.json
